[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prot2token"
version = "0.1.1"
description = "A simple machine learning package using scikit-learn"
authors = [
    {name = "Mahdi", email = "mahdipoormirzaie@gmail.com"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.0.0",
    "peft",
    "timm",
    "python-box",
    "pandas"
]

[project.urls]
"Homepage" = "https://github.com/mahdip72/prot2token/prot2token"

[tool.setuptools]
packages = ["prot2token"]